Thu May 20 03:50:46 BST 2004  Olly Betts <olly@survex.com>

	* include/xapian/database.h: Remove references to sessions in doxygen
	  comments.

Thu May 20 03:44:28 BST 2004  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,backends/database.cc,
	  backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_database.h,
	  backends/muscat36/da_database.h,backends/muscat36/db_database.h,
	  backends/net/net_database.cc,backends/quartz/quartz_database.cc,
	  backends/quartz/quartz_database.h,common/database.h,
	  common/net_database.h: Clean up the backend interface.

Thu May 20 03:18:30 BST 2004  Olly Betts <olly@survex.com>

	* backends/database.cc,backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_database.h,backends/muscat36/,
	  backends/net/net_database.cc,backends/quartz/quartz_database.cc,
	  backends/quartz/quartz_database.h,common/database.h:
	  Stripped out the session machinery - all that is actually required
	  is to ensure that any unflushed changes are flushed when the dtor
	  runs.

Mon May 17 01:04:17 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h,
	  backends/quartz/btree_types.h: Reworked split_p and split_n
	  members of Cursor into a separate C_split cursor.  This
	  reduces the memory overhead of each Bcursor (and hence each
	  QuartzPostList).

Sat May 15 01:29:40 BST 2004  Olly Betts <olly@survex.com>

	* docs/quickstart.html: Corrected lingering reference to "om.h" and
	  note that we need <iostream>.
	* docs/quickstartindex.cc.html,docs/quickstartexpand.cc.html,
	  docs/quickstartsearch.cc.html: Add <iostream>.
	* AUTHORS: Add John Ward for pointing out the above problems.

Fri May 14 00:59:51 BST 2004  Olly Betts <olly@survex.com>

	* HACKING: Added the start of a list of subtasks when doing a release.
	  Currently it's always me that does this, but it may not always be
	  and anyhow it'll help me to have a list to run through.
